--- a/Wyrmspan/dotnet/Capstone/appsettings.json
+++ b/Wyrmspan/dotnet/Capstone/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "Project": "Server=.\\SQLEXPRESS01;Database=Wyrmspan_SQL;Trusted_Connection=True;"
+    "Project": "Server=.\\SQLEXPRESS;Database=Wyrmspan_SQL;Trusted_Connection=True;"
   },
   "JwtSecret": "T3ch3l3v@t0rC0d1ngB00tc@mp!str1dE",
   "AllowedHosts": "*",
