--- a/LiveBurghWebsite/vue/package.json
+++ b/LiveBurghWebsite/vue/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "i": "^0.3.7",
+    "npm": "^10.5.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
-    "vueperslides": "^3.5.1",
+    "vue3-carousel": "^0.3.3",
+    "vueperslides": "^2.16.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
@@ -22,6 +25,8 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^7.20.0",
+    "stylus": "^0.63.0",
+    "stylus-loader": "^8.1.0",
     "vite": "^3.2.7",
     "vue-concise-slider": "^4.2.5",
     "vue-eslint-parser": "^9.3.0"
